--- a/wale/index.html
+++ b/wale/index.html
@@ -14,7 +14,7 @@
                 <h1 class="logo">Olawale Daniel</h1>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#portfolio">Project</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -29,24 +29,20 @@
         </div>
     </section>
 
-    <section id="portfolio" class="section">
+    <section id="" class="section">
         <div class="container">
-            <h2>Portfolio</h2>
+            
             <div class="portfolio-items">
+                
                 <div class="portfolio-item">
-                    <h3>Task Manager Web App</h3>
-                    <p>A web-based task management application built with React.js and Firebase.</p>
-                    <a href="#">View Project <i class="fas fa-arrow-right"></i></a>
+                    <h3>Food Reciepe Website</h3>
+                    <p>An Online Food Receipe Website built and Utilized Html, Css .</p>
+                    <a href="/food_recipe.html">View Project <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="portfolio-item">
-                    <h3>E-commerce Website</h3>
-                    <p>An online store built with Node.js, Express.js, and MongoDB.</p>
-                    <a href="#">View Project <i class="fas fa-arrow-right"></i></a>
-                </div>
-                <div class="portfolio-item">
-                    <h3>Personal Blog</h3>
-                    <p>A blogging platform created with WordPress, featuring custom themes and plugins.</p>
-                    <a href="#">View Project <i class="fas fa-arrow-right"></i></a>
+                    <h3>Calculator</h3>
+                    <p></p>
+                    <a href="/calculator.html">View Project <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -56,7 +52,6 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="profile">
-                <img src="your-picture.jpg" alt="Your Name">
                 <p>I'm Olawale Daniel, a passionate software developer and content designer with expertise in building innovative solutions and creating engaging content. I specialize in [mention your areas of expertise or technologies you work with].</p>
             </div>
         </div>
